--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,34 @@
-# Logs
-logs
-*.log
+# dependencies
+node_modules/
+
+# dotenv environment files
+.env
+.env.*
+
+# production
+dist/
+build/
+
+# system files
+.DS_Store
+Thumbs.db
+
+# local IDE/editor files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# test coverage
+coverage/
+
+# typescript cache
+*.tsbuildinfo
+
+# local build artifacts
 *.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
