--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.1",
     "axios": "^1.9.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.514.0",
     "mui": "^0.0.1",
     "react": "^19.1.0",
